k8s-manifests/paymentprocessor/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    name: default
    app.kubernetes.io/part-of: paymentprocessor
