k8s-manifests/paymentprocessor/31-service-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentprocessor-db
  namespace: default
  labels:
    app: paymentprocessor
    app.kubernetes.io/name: paymentprocessor
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: db
  selector:
    app: paymentprocessor
    component: database
