k8s-manifests/paymentprocessor/41-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentprocessor
  namespace: default
  labels:
    app: paymentprocessor
    app.kubernetes.io/name: paymentprocessor
    app.kubernetes.io/component: application
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: paymentprocessor
    component: application
